# easy-object-conscious-slam

./: .gitignore  CMakeLists.txt  Instructions.txt  Readme.md  compile  dist.npy  frames_2023-11-28_12.57.17.gv  ocslam.xml  package.xml  run  runall  slam
data/: model.yaml
data/outputs/: image_0.txt  image_10.txt  image_100.txt  image_102.txt  image_104.txt  image_106.txt  image_108.txt  image_110.txt  image_112.txt  image_114.txt  image_116.txt  image_118.txt  image_12.txt  image_120.txt  image_122.txt  image_124.txt  image_126.txt  image_128.txt  image_130.txt  image_132.txt  image_134.txt  image_136.txt  image_138.txt  image_14.txt  image_140.txt  image_142.txt  image_144.txt  image_146.txt  image_148.txt  image_150.txt  image_152.txt  image_154.txt  image_156.txt  image_158.txt  image_16.txt  image_160.txt  image_162.txt  image_164.txt  image_166.txt  image_168.txt  (+328 more)
data/tools/: Calibrate.py  Calibration.py  Capture.cpp  Check.py  Dataset.py  Fix.py  Labeler.py  Separate.py  Train.py
data/tools/Sketch/: Sketch.pde
data/tools/scene/: scene.pde
include/: Capture.hpp  Follower.hpp  Robot.hpp  Socket.hpp  Utils.hpp
include/ocslam/: Drivetrain.hpp  Robot.hpp  Utils.hpp
install/: local_setup.sh  setup.sh
install/ocslam/share/ament_index/resource_index/package_run_dependencies/: ocslam
install/ocslam/share/ament_index/resource_index/parent_prefix_path/: ocslam
install/ocslam/share/ament_index/resource_index/webots_ros2_driver__pluginlib__plugin/: ocslam
install/ocslam/share/ocslam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  ocslam.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ocslam/share/ocslam/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ocslamConfig-version.cmake  ocslamConfig.cmake
install/ocslam/share/ocslam/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ocslam/share/ocslam/launch/: robot_launch.py
install/ocslam/share/ocslam/resource/: ocslam.urdf
install/ocslam/share/ocslam/worlds/: .Project.wbproj  Project.wbt
launch/: robot_launch.py  robot_launch_model.py
ocslam/install/: local_setup.sh  setup.sh
ocslam/log/: latest_build
protos/: PhotoFrame.proto
resource/: common_properties.xacro  intrinsic_matrix.npy  model.yaml  ocslam.urdf
resource/outputs/: Ball_16.txt  Ball_19.txt  Ball_2.txt  Ball_24.txt  Ball_25.txt  Ball_26.txt  Ball_27.txt  Ball_36.txt  Ball_38.txt  Ball_50.txt  Ball_51.txt  Ball_54.txt  Ball_70.txt  Ball_84.txt  DogDog_0.txt  DogDog_1.txt  DogDog_10.txt  DogDog_100.txt  Dog_17.txt  Dog_18.txt  Dog_20.txt  Dog_23.txt  Dog_24.txt  Dog_27.txt  Dog_36.txt  Dog_41.txt  Dog_42.txt  Dog_46.txt  Dog_47.txt  Dog_55.txt  Dog_56.txt  Dog_58.txt  Dog_61.txt  Dog_73.txt  Dog_80.txt  Dog_81.txt  Duck_1.txt  Duck_10.txt  Duck_14.txt  Duck_21.txt  (+100 more)
rviz/: urdf_config.rviz
scripts/: Calibration.py  Consciousness.py  Object.py  Projection.py  ProjectionTest.py  Utils.py  YOLO.py
src/: Capture.cpp  Check.py  Dataset.py  Drivetrain.cpp  Fix.py  Follower.cpp  Labeler.py  Robot.cpp  Separate.py  Socket.cpp  main.cpp
src/Sketch/: Sketch.pde
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
worlds/: .Calibration.wbproj  .Project.wbproj  .world_test.wbproj  Calibration.wbt  Project.wbt
